--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "telegraf": "^4.10.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9"
+    "@types/node": "^18.11.9",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
